--- a/style.css
+++ b/style.css
@@ -204,7 +204,7 @@ div.Header
 	margin: 0 auto;
 	position: relative;
 	z-index:0;
-	height: 140px;
+	height: 220px; /* 140px; */
 }
 /* end Header */
 
@@ -214,7 +214,7 @@ div.Header
 	display : block;
 	position: absolute;
 	left: 10px;
-	top: 3px;
+	top: 10px; /* 3px; */
 	width: 850px;
 }
 /* end Logo */
@@ -1609,6 +1609,10 @@ td.views-field-created {
 	border-style:solid;
 	border-width:1px;
 }
+
+/* Hide title on frontpage */
+
+.front #main .title {display: none;}
 
 /*  Override CSS for module itweak_upload
 	(the stylish attachment display)		*/
